loopfor.LoopFor.scala.error
Compilation error:
LoopFor:8: error: illegal start of simple expression
	}
        ^